# llm-pipeline-examples

./: README.md  cloudbuild-gke-pr.yaml  cloudbuild-nightly.yaml  cloudbuild-pr.yaml  pipeline.py  pipeline_copy.py  pipeline_gke.py  predict_payload.json  predict_result.json  predict_result_flan.json  predict_result_triton.json  predict_result_xxlnightly.json  pyproject.toml  xxl-a100.yml
components/: convert.yaml  download.yaml  preprocess.yaml  trainer.yaml
configs/: bart2vm16gpu.json  small1vm1gpu.json  small2vm16gpu.json  xxl16vm8a2plus.json  xxl16vma3.json  xxl2vm16gpu.json  xxl8vm16gpu.json  xxlnightly.json
docker/: bakedt511b.Dockerfile  batch.Dockerfile  benchmark.Dockerfile  convert.Dockerfile  convertAndRunTriton.Dockerfile  copyModel.Dockerfile  deploy-gke.Dockerfile  deploy.Dockerfile  downloadModel.Dockerfile  gke-provision.Dockerfile  predict-triton.Dockerfile  predict.Dockerfile  runwrappedtriton.Dockerfile  setupFT.Dockerfile  test.Dockerfile  train.Dockerfile
examples/: config.pbtxt  e2e_triton.sh  gcloud_configuration.json  json_request.json  local_triton_curl.sh  raw_request  raw_request_unencoded  running-on-gke.md  t5-gke-sample-notebook.ipynb  t5_json_request.json  triton-local.py  triton-on-vertexai.ipynb  triton-on-vertexai.py  triton-on-vertexai_predserv.py  tritonlocal.py
gke/: cluster_config.list  deploy_to_gke.py  pipeline_gke.py  run_batch.sh
scripts/: benchmark.py  clean_up_torch_xla.sh  install.sh  json_to_env.sh
src/: deepspeed.json  deploy.py  download.py  finetune.py  predict.py  predict_deepspeed.py  predict_transformers.py  (+8 more)
(+67 files in other folders)
